подготовка к выводу во View

--- a/WorkSheets/WorkSheets.csproj
+++ b/WorkSheets/WorkSheets.csproj
@@ -131,7 +131,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Base\BaseModel.cs" />
     <Compile Include="Models\FormulaTemplateViewModel.cs" />
+    <Compile Include="Models\MethodViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
