--- a/BusinessLogic/BusinessLogic.csproj
+++ b/BusinessLogic/BusinessLogic.csproj
@@ -56,6 +56,7 @@
     <Compile Include="DTO\VariableDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Base\IMethodService.cs" />
+    <Compile Include="Services\MethodService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="IoC\" />
@@ -65,6 +66,10 @@
     <ProjectReference Include="..\DataAccess\DataAccess.csproj">
       <Project>{5803ceef-995d-479d-b35b-f05d59794a1b}</Project>
       <Name>DataAccess</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Domain\Domain.csproj">
+      <Project>{E9F6F08A-DCA4-40B5-9CC3-2DAF13793223}</Project>
+      <Name>Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
