--- a/BusinessLogic/packages.config
+++ b/BusinessLogic/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.4.0" targetFramework="net461" />
+  <package id="Autofac.Mvc5" version="4.0.1" targetFramework="net461" />
   <package id="AutoMapper" version="6.0.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.0" targetFramework="net461" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
 </packages>
